# CPlusPlus

./: .gitignore  CMakeLists.txt  Classes.cpp  Classes.h  CommissionEmployee.cpp  CommissionEmployee.h  Employee.cpp  Employee.h  Functional.h  Helper.cpp  Helper.h  HourlyEmployee.cpp  HourlyEmployee.h  SalariedEmployee.cpp  SalariedEmployee.h  Student.cpp  Student.h  StudentLab  Subjects.cpp  Subjects.h  main.cpp  students.txt  testMain  usecase.bat  usecase.sh
TestStuff/: Functional.cpp  Functional.h  testMain.cpp
